--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bcm2835-lpa = "0.4.0"
+log = { version = "0.4.25", default-features = false }
 pi0-register = { version = "0.1.0", path = "../pi0-register" }
 
 [[bin]]
