--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,10 @@
 [unstable]
 build-std = ["core", "compiler_builtins"]
 
+[workspace]
+resolver = "2"
+
 [build]
-target = ["armv6zk-none-eabihf.json"]
-rustflags = ["-C", "link-arg=-Tlink.x"]
+target = ["app/armv6zk-none-eabihf.json"]
+rustflags = ["-C", "link-arg=-Tapp/link.x"]
+
