--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,7 @@
-[package]
-name = "rust"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-bcm2835-lpa = "0.4.0"
-log = { version = "0.4.25", default-features = false }
-pi0-register = { version = "0.1.0", path = "../pi0-register" }
-
-[[bin]]
-name = "rust"
-path = "src/main.rs"
-test = false
-doctest = false
-bench = false
+members = [
+    "app",
+    "pins",
+]
 
