fix rust-analyzer warnings

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,5 +6,6 @@ resolver = "2"
 
 [build]
 target = ["app/armv6zk-none-eabihf.json"]
+all_targets = false
 rustflags = ["-C", "link-arg=-Tapp/link.x"]
 
