--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 bcm2835-lpa = "0.4.0"
-log = { version = "0.4.25", default-features = false }
+heapless = "0.8.0"
 pi0-register = { version = "0.1.0", path = "../pins" }
 
 [[bin]]
