--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 bcm2835-lpa = "0.4.0"
 heapless = "0.8.0"
-pi0-register = { version = "0.1.0", path = "../pins" }
+pi0-lib = { version = "0.1.0", path = "../lib" }
 
 [[bin]]
 name = "rust"
