--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "pi0-register"
+name = "pi0-lib"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 bcm2835-lpa = "0.4.0"
 frunk = { version = "0.4.3", default-features = false }
-log = "0.4.25"
