--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,5 @@
-[build]
-target = ["armv6zk-none-eabihf.json"]
+# [unstable]
+# build-std = ["core", "compiler_builtins", "alloc"]
+
+# [build]
+# target = ["armv6zk-none-eabihf.json"]
