--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bcm2835-lpa = "0.4.0"
 heapless = "0.8.0"
 pi0-lib = { version = "0.1.0", path = "../lib" }
+critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
 
 [[bin]]
 name = "rust"
