--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bcm2835-lpa = "0.4.0"
+bitfield = "0.18.1"
 critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
 frunk = { version = "0.4.3", default-features = false }
 heapless = "0.8.0"
