--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,3 +10,4 @@ critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
 frunk = { version = "0.4.3", default-features = false }
 heapless = "0.8.0"
 crc = "3.2.1"
+num_enum = { version = "0.7.3", default-features = false }
